refactory: Deletar aluno e suas matrículas
