# src/modules/accounts/useCases/alunos/deleteAluno/DeleteAlunoController.ts
@@ -5,12 +5,12 @@ import { DeleteAlunoUseCase } from "./DeleteAlunoUseCase";
 
 export class DeleteAlunoController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { matricula } = request.params;
+    const { cpf } = request.params;
 
     const deleteAlunoUseCase = container.resolve(DeleteAlunoUseCase);
 
     try {
-      await deleteAlunoUseCase.execute(matricula);
+      await deleteAlunoUseCase.execute(cpf);
 
       return response.status(204).send();
     } catch (error) {
